examples/apigateway/vpc-lattice/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kro-vpc-lattice-demo
  namespace: default
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
